--- a/3.html
+++ b/3.html
@@ -9,6 +9,16 @@
   padding: 20px;
 }
 </style>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134137101-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-134137101-1');
+</script>
+
 </head>
 <body>
 
