--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <title>Neighbors Table</title>
   <meta charset="urf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134137101-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-134137101-1');
+  </script>
+
 </head>
 <body background="back1.jpg">
   <h1><a href="index.html"><strong>당신의 이웃의 식탁이 궁금하다!</strong></a></h1>
